fix: add spacing above All Posts button

--- a/src/style.css
+++ b/src/style.css
@@ -713,6 +713,7 @@ section {
 
 .view-all-posts {
   text-align: center;
+  margin-top: 3rem;
 }
 
 /* Blog Cards */
